--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advokatska kancelarija Milić - Advokati Beograd</title>
     <meta name="description" content="Profesionalna advokatska kancelarija u Beogradu. Pružamo pravne usluge iz oblasti krivičnog, građanskog, privrednog i porodičnog prava.">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles(4).css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="logo">
-                    <img src="images/logo.png" alt="Advokatska kancelarija Milić" class="logo-img">
+                    <img src="logo(1 ).png" alt="Advokatska kancelarija Milić" class="logo-img">
                     <div class="logo-text">
                         <h1>MILIĆ</h1>
                         <p>ADVOKATSKA KANCELARIJA</p>
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/advokat-hero.jpg" alt="Advokat Milić" class="hero-img">
+                <img src="advokat-hero(1).jpg" alt="Advokat Milić" class="hero-img">
             </div>
         </div>
     </section>
@@ -101,7 +101,7 @@
                 </div>
                 
                 <div class="about-image">
-                    <img src="images/advokat-office.jpg" alt="Kancelarija" class="about-img">
+                    <img src="advokat-office(1).jpg" alt="Kancelarija" class="about-img">
                 </div>
             </div>
         </div>
@@ -323,7 +323,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="images/logo.png" alt="Advokatska kancelarija Milić" class="footer-logo-img">
+                        <img src="logo(1).png" alt="Advokatska kancelarija Milić" class="footer-logo-img">
                         <div class="footer-logo-text">
                             <h3>MILIĆ</h3>
                             <p>ADVOKATSKA KANCELARIJA</p>
@@ -369,7 +369,8 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script(4).js"></script>
 </body>
 </html>
+
 
